Update 01-docker-build-and-push-to-acr-pipeline.yml for Azure Pipelines

--- a/01-docker-build-and-push-to-acr-pipeline.yml
+++ b/01-docker-build-and-push-to-acr-pipeline.yml
@@ -11,7 +11,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '8a4f0c8a-508b-4cb6-9a83-dfc6b2deaadf'
-  imageRepository: 'app1nginx'
+  imageRepository: 'app1/app1nginx'
   containerRegistry: 'aksdevopsacr710.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
